# steppyr

./: .gitignore  CMakeLists.txt  setup.py
include/: steppyr.hpp
include/drivers/: drivers.hpp
src/: CMakeLists.txt  steppyr.cpp
src/drivers/: drivers.cpp
steppyr/: CMakeLists.txt
steppyr/include/: modules.h
steppyr/src/: steppyr.cpp
steppyr/src/drivers/: drivers.cpp  stepdir.cpp
steppyr/src/profiles/: accel.cpp  profiles.cpp
steppyr_cpp/: CMakeLists.txt
steppyr_cpp/include/: direction.hpp  steppyr.hpp  utils.h
steppyr_cpp/include/drivers/: drivers.hpp  stepdir.hpp
steppyr_cpp/include/profiles/: accel.hpp  profiles.hpp
steppyr_cpp/src/: steppyr.cpp  utils.cpp
steppyr_cpp/src/drivers/: drivers.cpp  stepdir.cpp
steppyr_cpp/src/profiles/: accel.cpp  profiles.cpp
steppyr_orig/drivers/tmc4361/: checks.py
